--- a/djangologin/templates/base.html
+++ b/djangologin/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %}</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
     <link
       rel="stylesheet"
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
@@ -59,7 +59,12 @@
           {% endif %}
         </ul>
       </div>
-      <div>{% block body%} {%block content %}{% endblock %} {% endblock %}</div>
+      <div class="flex-grow flex flex-col justify-center items-center bg-gray-100">
+        {% block body %}
+          {%block content %}
+          {% endblock %}
+        {% endblock %}
+      </div>
     </div>
   </body>
 </html>
