--- a/feed/templates/feed/homepage.html
+++ b/feed/templates/feed/homepage.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
+{% load thumbnail %}
+
 {% block title %}new title{% endblock %} 
 {% block body%} 
     {% for post in posts %}
@@ -21,15 +23,17 @@
             </p>
         </div>
         <div class="flex justify-between items-center mt-4">
-            <a class="text-blue-600 hover:underline" href="#">Read more</a>
+            <a class="text-blue-600 hover:underline" href="{% url 'feed:detail' post.id %}">Read more</a>
             <div>
             <a class="flex items-center" href="#">
-                <img
-                class="mx-4 w-10 h-10 object-cover rounded-full hidden sm:block"
-                src="https://images.unsplash.com/photo-1502980426475-b83966705988?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=373&q=80"
-                alt="avatar"
-                />
-                <h1 class="text-gray-700 font-bold">Khatab wedaa</h1>
+                {% thumbnail post.author.profile.image "373x373" crop="center" as im %}
+                    <img
+                    class="mx-4 w-10 h-10 object-cover rounded-full hidden sm:block"
+                    src="{{ im.url }} "
+                    />
+                {% endthumbnail %}
+               
+                <h1 class="text-gray-700 font-bold">{{ post.author.username }}</h1>
             </a>
             </div>
         </div>
