profiles and all posts
created user profiles with user posts, post count, and follow count

created follow system for users to follow and unfollow users

updated home page to show posts of those you are following if over 30

added a page to see all posts if you're logged in

--- a/feed/templates/feed/all_posts.html
+++ b/feed/templates/feed/all_posts.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Posts{% endblock %} 
+{% block title %}All Posts{% endblock %} 
 {% block body%} 
     <div id="posts-container">
         {% for post in posts %}
