--- a/djangologin/templates/base.html
+++ b/djangologin/templates/base.html
@@ -1,10 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
@@ -15,7 +19,7 @@
     <div class="min-h-screen flex flex-row bg-gray-100">
       <div class="flex flex-col w-56 bg-white rounded-r-3xl overflow-hidden">
         <div class="flex items-center justify-center h-20 shadow-md">
-          <h1 class="text-3xl uppercase text-indigo-500">Logo</h1>
+          <h1 class="text-3xl uppercase text-indigo-500">Django Blog</h1>
         </div>
         <ul class="flex flex-col py-4">
           <li>
@@ -31,29 +35,42 @@
             </a>
           </li>
           {% if request.user.is_authenticated %}
-          <li>
-            <a
-              href="{% url 'feed:new_post' %}"
-              class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800"
-            >
-              <span
-                class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"
-                ><i class='bx bx-message-square-add' ></i></span>
-              <span class="text-sm font-medium">New Post</span>
-            </a>
-          </li>
-          <li>
-            <a
-              href="{% url 'account_logout' %}"
-              class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800"
-            >
-              <span
-                class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"
-                ><i class="bx bx-log-out"></i
-              ></span>
-              <span class="text-sm font-medium">Logout</span>
-            </a>
-          </li>
+            <li>
+              <a
+                href="{% url 'account_signup' %}"
+                class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800"
+              >
+                <span
+                  class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"
+                  ><i class='bx bxl-django'></i></i
+                ></span>
+                <span class="text-sm font-medium">All Posts</span>
+              </a>
+            </li>
+            <li>
+              <a
+                href="{% url 'feed:new_post' %}"
+                class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800 js-toggle-modal"
+              >
+                <span
+                  class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"
+                  ><i class="bx bx-message-square-add"></i
+                ></span>
+                <span class="text-sm font-medium">New Post</span>
+              </a>
+            </li>
+            <li>
+              <a
+                href="{% url 'account_logout' %}"
+                class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800"
+              >
+                <span
+                  class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"
+                  ><i class="bx bx-log-out"></i
+                ></span>
+                <span class="text-sm font-medium">Logout</span>
+              </a>
+            </li>
           {% else %}
           <li>
             <a
@@ -67,17 +84,87 @@
               <span class="text-sm font-medium">Login</span>
             </a>
           </li>
+          <li>
+            <a
+              href="{% url 'account_signup' %}"
+              class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800"
+            >
+              <span
+                class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"
+                ><i class="bx bx-log-in"></i
+              ></span>
+              <span class="text-sm font-medium">Register</span>
+            </a>
+          </li>
+          
           {% endif %}
         </ul>
       </div>
-<div class="flex-grow flex flex-col items-center justify-start bg-gray-100 pt-10">
-    <div class="max-w-4xl w-full p-6 mx-auto">
-        {% block body %}
-            {% block content %}
-            {% endblock %}
-        {% endblock %}
+      <div
+        class="flex-grow flex flex-col items-center justify-start bg-gray-100 pt-10"
+      >
+        <div class="max-w-4xl w-full p-6 mx-auto">
+          {% block body %} {% block content %} {% endblock %} {% endblock %}
+        </div>
+{% if request.user.is_authenticated %}
+
+  <!-- component -->
+  <div
+    class="flex items-center justify-center fixed left-0 bottom-0 w-full h-full bg-gray-800 bg-opacity-75 hidden js-modal"
+  >
+    <div class="bg-white rounded-lg w-1/2">
+      <div class="flex flex-col items-start p-4">
+        <div class="flex items-center w-full">
+          <div class="text-gray-900 font-medium text-lg">New post</div>
+          <svg
+            class="ml-auto fill-current text-gray-700 w-6 h-6 cursor-pointer js-toggle-modal"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 18 18"
+          >
+            <path
+              d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
+            />
+          </svg>
+        </div>
+        <hr />
+        <div class="w-full">
+          <textarea class "border-2 border-blue-500 w-full js-title-text" rows="1" style="resize: none;"></textarea>
+        </div>
+        <hr />
+       <div class="w-full">
+        <textarea class="border-2 border-black-500 w-full js-title-text" placeholder="Title" rows="1" style="resize: none;" maxlength="140"></textarea>
+        </div>
+        <hr />
+        <div class="w-full">
+            <textarea class="border-2 border-black-500 w-full my-4 js-post-text" placeholder="Post content" rows="3" maxlength="240"></textarea>
+        </div>
+        <hr />
+        <div class="ml-auto">
+          <button
+            class="bg-white text-gray-800 font-bold rounded border-b-2 border-purple-500 hover:border-purple-600 hover:bg-purple-500 hover:text-white shadow-md py-2 px-6 inline-flex items-center mt-4 js-submit"
+            type="button" data-post-url="{% url 'feed:new_post' %}"
+          >
+            <span class="mr-2">Create Post</span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill="currentcolor"
+                d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
+              ></path>
+            </svg>
+          </button>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
+{% endif %}
+      </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="{% static 'js/main.js' %}"></script>
     </div>
   </body>
 </html>
