--- a/feed/templates/feed/detail.html
+++ b/feed/templates/feed/detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}by {{ post.author.username }}{% endblock %}
+{% block title %}{{ post.title }} by {{ post.author.username }}{% endblock %}
 
 {% block body %}
     {% include "includes/post.html" with post=post  %}
