fixed url missing in /all link in navbar

--- a/djangologin/templates/base.html
+++ b/djangologin/templates/base.html
@@ -37,7 +37,7 @@
           {% if request.user.is_authenticated %}
             <li>
               <a
-                href="{% url 'account_signup' %}"
+                href="{% url 'feed:all_posts' %}"
                 class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800"
               >
                 <span
